--- a/peanut/photos/templates/photos/_timeline_block.html
+++ b/peanut/photos/templates/photos/_timeline_block.html
@@ -8,7 +8,7 @@
 	{% for cluster in entry.clusterList %}
 		{% for imageEntry in cluster.photoblocks %}
 			<div class = "ui-image {% if imageEntry.dist == None and cluster.count > 0 %} cluster{% elif imageEntry.dist != None %}hidden {% else %} {% endif %}" redirect="{{ thumbnailBasepath }}{{ imageEntry.photo.photoFilename }}">
-					<img data-lazy-src="{{ thumbnailBasepath }}{{ resultsDict.photoIdToThumb|lookup:imageEntry.photo.photoId }}" class="lazy{% if imageEntry.dist != None %}-cluster{% endif %}" {% if imageEntry.simrow %} sim="{{ imageEntry.simrow }}" {% endif %} height="{{ imageSize }}px" width="{{ imageSize }}px" 
+					<img data-lazy-src="{{ thumbnailBasepath }}{{ imageEntry.photo.photoId }}-thumb-156.jpg" class="lazy{% if imageEntry.dist != None %}-cluster{% endif %}" {% if imageEntry.simrow %} sim="{{ imageEntry.simrow }}" {% endif %} height="{{ imageSize }}px" width="{{ imageSize }}px" 
 					{% if debug %}title="TEXT: {{ imageEntry.photo.text }} | TIME: {{ imageEntry.photo.timeTaken }} | ORIG_CLASSIFICATIONS: {{ imageEntry.photo.classificationData }}"{% endif %}>
 				
 				{% if imageEntry.dist == None and cluster.count > 0 %}
