--- a/peanut/photos/templates/photos/_timeline_block.html
+++ b/peanut/photos/templates/photos/_timeline_block.html
@@ -8,7 +8,7 @@
 	{% for cluster in entry.clusterList %}
 		{% for imageEntry in cluster.photoblocks %}
 			{% if debug or imageEntry.dist == None or imageEntry.dist >= 40 %} 
-				<div class = "ui-image {% if imageEntry.dist == None and cluster.count > 1 %} cluster{% elif imageEntry.dist != None %}hidden {% else %} {% endif %}" redirect="{{ thumbnailBasepath }}{{ imageEntry.photo.photoFilename }}">
+				<div class = "ui-image {% if imageEntry.dist == None and cluster.count > 1 %} cluster{% elif imageEntry.dist != None %}hidden {% else %} {% endif %}" redirect="{{ thumbnailBasepath }}{{ imageEntry.photo.photoId }}.jpg">
 						<img data-lazy-src="{{ thumbnailBasepath }}{{ imageEntry.photo.photoId }}-thumb-156.jpg" class="lazy{% if imageEntry.dist != None %}-cluster{% endif %}" height="{{ imageSize }}px" width="{{ imageSize }}px" 
 						{% if debug %}title="TEXT: {{ imageEntry.photo.text }} | TIME: {{ imageEntry.photo.timeTaken }} | ORIG_CLASSIFICATIONS: {{ imageEntry.photo.classificationData }}" {% if imageEntry.simrow %} sim="{{ imageEntry.simrow }}" {% endif %} {% endif %}>
 					
