--- a/peanut/photos/templates/admin/userbaseSummary.html
+++ b/peanut/photos/templates/admin/userbaseSummary.html
@@ -59,7 +59,7 @@
 		<tr class='ui-row {% if entry.internal == False %} ui-row-external {% endif %}'>
 			<td class='userid'> {{ entry.user.id }} </td>
 			<td class='name'> {{ entry.user.first_name}} {{ entry.user.last_name }} </td>
-			<td class='phoneid'> {{ entry.user.phone_id|truncatechars:12}} </td>
+			<td class='phoneid' title='{{ entry.user.phone_id }}'> {{ entry.user.phone_id|truncatechars:12}} </td>
 			<td class='created'> {{ entry.user.added|date:'m/d h:i.s A' }} </td>
 			<td class='db-count'> {{ entry.dbCount }} </td>
 			<td class='db-thumbnails'> {{ entry.thumbs }} </td>
