--- a/peanut/photos/templates/admin/userbaseSummary.html
+++ b/peanut/photos/templates/admin/userbaseSummary.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+<meta http-equiv="refresh" content="5">
+</head>
 <style>
 	html, body { padding: 0; margin: 0; font-family: arial; font-size: 12px;}
 	table {
