--- a/peanut/photos/templates/admin/userbaseSummary.html
+++ b/peanut/photos/templates/admin/userbaseSummary.html
@@ -53,7 +53,7 @@
 			<td class='db-count'> DBPhotos </td>
 			<td class='db-thumbnails'> Thumbnails </td>
 			<td class='index-count'> Indexed <br> Photos </td>
-			<td class='twofish'> TwoFish </td>
+			<td class='twofish'> TwoFish <br> (%) </td>
 			<td class='clustered'> Clustered </td>
 			<td class='classifications'> Image <br> Classifications </td>
 			<td class='db-fullimage'> Full <br>images </td>
