--- a/peanut/photos/templates/photos/_timeline_block.html
+++ b/peanut/photos/templates/photos/_timeline_block.html
@@ -3,21 +3,21 @@
 
 <div class="ui-photo-block hidden">
 	<div class="ui-time-header">
-		{{ entry.date }} ({{ entry.count }})
+		{{ entry.date }} ({{ entry.clusterList|length }})
 	</div>
 	{% for cluster in entry.clusterList %}
-		{% for imageEntry in cluster.photoblocks %}
-			{% if debug or imageEntry.dist == None or imageEntry.dist >= 40 %} 
-				<div class = "ui-image {% if imageEntry.dist == None and cluster.count > 1 %} cluster{% elif imageEntry.dist != None %}hidden {% else %} {% endif %}" redirect="{{ thumbnailBasepath }}{{ imageEntry.photo.photoId }}.jpg" photoId="{{ imageEntry.photo.photoId }}">
+		{% for imageEntry in cluster %}
+			{% if imageEntry.dist == None or imageEntry.dist >= 40 %} 
+				<div class = "ui-image {% if imageEntry.dist == None and cluster|length > 1 %} cluster{% elif imageEntry.dist != None %}hidden {% else %} {% endif %}" redirect="{{ thumbnailBasepath }}{{ imageEntry.photo.photoId }}.jpg" photoId="{{ imageEntry.photo.photoId }}">
 						<img data-lazy-src="{{ thumbnailBasepath }}{{ imageEntry.photo.photoId }}-thumb-156.jpg" class="lazy{% if imageEntry.dist != None %}-cluster{% endif %}" height="{{ imageSize }}px" width="{{ imageSize }}px" 
-						{% if debug %}title="TEXT: {{ imageEntry.photo.text }} | TIME: {{ imageEntry.photo.timeTaken }} | ORIG_CLASSIFICATIONS: {{ imageEntry.photo.classificationData }}" {% if imageEntry.simrow %} sim="{{ imageEntry.simrow }}" {% endif %} {% endif %}>
+						title="ID: {{ imageEntry.photo.photoId }}  | TEXT: {{ imageEntry.photo.text }} | TIME: {{ imageEntry.photo.timeTaken }} | ORIG_CLASSIFICATIONS: {{ imageEntry.photo.classificationData }} | SIMROW: {{ imageEntry.simrow }}" >
 					
-					{% if imageEntry.dist == None and cluster.count > 1 %}
+					{% if imageEntry.dist == None and cluster|length > 1 %}
 						<div class="ui-image-page-turn">
 							<img src="{% static "page-fold-th.png" %}" height="100%" width="100%" />
 						</div>
 						<div class="ui-image-count text">
-							{{ cluster.count }}
+							{{ cluster|length }}
 						</div>
 					{% endif %}
 				</div>
