update summary page with faces data

--- a/peanut/photos/templates/admin/userbaseSummary.html
+++ b/peanut/photos/templates/admin/userbaseSummary.html
@@ -62,6 +62,7 @@
 			<td class='twofish'> TwoFish <br> (%) </td>
 			<td class='clustered'> Clustered <br> (%)  </td>
 			<td class='classifications'> Image <br> Rec (%)  </td>
+			<td class='faces'> Face <br> Rec (%)  </td>
 			<td class='db-fullimage'> Full <br>images (%) </td>
 			<td class='last-uploaded-timestamp'> Last Upload (GMT) </td>
 		</tr>
@@ -77,6 +78,7 @@
 			<td class='twofish right'>{{ entry.twofish }} </td>
 			<td class='clustered right'> {{ entry.clustered }} </td>
 			<td class='classifications right'> {{ entry.classifications }} </td>
+			<td class='faces right'> {{ entry.faces }} </td>
 			<td class='db-fullimage right' title='{{ entry.fullimagesCount }}'> {{ entry.fullimages }} </td>			
 			<td class='last-uploaded-timestamp'> {{ entry.lastUploadTime|date:'m/d h:i.s A' }} </td>
 		</tr>
