minor tweak to summary page

--- a/peanut/photos/templates/admin/userbaseSummary.html
+++ b/peanut/photos/templates/admin/userbaseSummary.html
@@ -20,8 +20,8 @@
 	.ui-content {
 		padding: 10px 0px 0px 10px;
 	}
-	.ui-table {
-
+	.ui-table tr:hover {
+		background-color: #b8d1f3;
 	}
 	.ui-row {
 
