--- a/Duffy/DFSearchViewController.xib
+++ b/Duffy/DFSearchViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13C1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -21,7 +21,7 @@
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 </webView>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="7kT-Iv-7ae">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="518"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
@@ -38,7 +38,7 @@
                 <constraint firstItem="f4T-rw-vqS" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="B8W-YL-gUi"/>
                 <constraint firstAttribute="trailing" secondItem="f4T-rw-vqS" secondAttribute="trailing" id="Wg6-QH-CN7"/>
                 <constraint firstItem="7kT-Iv-7ae" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="hFZ-9h-1bA"/>
-                <constraint firstAttribute="bottom" secondItem="7kT-Iv-7ae" secondAttribute="bottom" constant="50" id="pjj-gB-Jq7"/>
+                <constraint firstAttribute="bottom" secondItem="7kT-Iv-7ae" secondAttribute="bottom" id="pjj-gB-Jq7"/>
                 <constraint firstAttribute="trailing" secondItem="7kT-Iv-7ae" secondAttribute="trailing" id="qWo-r5-6on"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
