--- a/Duffy/DFSearchBar.xib
+++ b/Duffy/DFSearchBar.xib
@@ -13,6 +13,10 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icons/SearchBarIcon.png" translatesAutoresizingMaskIntoConstraints="NO" id="xPT-ud-47f">
                     <rect key="frame" x="0.0" y="19" width="26" height="26"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="26" id="3b9-5w-6d6"/>
+                        <constraint firstAttribute="height" constant="26" id="h1L-0d-fxQ"/>
+                    </constraints>
                 </imageView>
                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NNO-gn-7DZ">
                     <rect key="frame" x="272" y="17" width="48" height="30"/>
